--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
     <header class="absolute top-0 left-0 w-full z-10 p-4 bg-gray-900 bg-opacity-70">
         <nav class="flex justify-between items-center max-w-7xl mx-auto">
             <!-- BRAND LOGO link to homepage -->
-            <a href="index.html" class="text-white text-lg font-bold hover:opacity-80 transition-opacity duration-300">BRAND LOGO</a>
+            <!-- 変更点: BRAND LOGOのテキストを画像に差し替え -->
+            <a href="index.html" class="text-white text-lg font-bold hover:opacity-80 transition-opacity duration-300">
+                <img src="IMG_9950.JPG" alt="BRAND LOGO" class="h-8 w-auto">
+            </a>
             <div class="hidden md:flex space-x-6 text-white text-sm">
                 <!-- サービスを削除 -->
                 <a href="all-product.html" class="hover:underline">商品一覧</a>
@@ -131,7 +134,7 @@
 
                 <!-- Product Item: リバーシブルセット -->
                 <div class="product-card-preview p-6 text-center">
-                    <img src="line_oa_chat_250418_123438.jpg" alt="リバーシブルセット" class="w-full h-48 object-cover rounded-md mb-4">
+                    <img src="IMG_2809.jpg" alt="リバーシブルセット" class="w-full h-48 object-cover rounded-md mb-4">
                     <h3 class="text-xl font-semibold mb-2 text-gray-100">リバーシブルセット</h3>
                     <p class="text-orange-400 text-2xl font-bold mb-4">¥7,500<span class="text-lg text-gray-300">〜</span></p>
                     <p class="text-gray-300 text-sm mb-4">
@@ -319,8 +322,8 @@
             <h2 class="text-3xl font-bold mb-4 text-gray-100">LINE公式アカウント</h2>
             <p class="text-gray-300 mb-8">お友達追加で最新情報や限定クーポンをゲット！</p>
             <div class="flex justify-center items-center">
-                <!-- Replace 'https://placehold.co/200x200/00B900/FFFFFF?text=LINE+QR' with your actual LINE QR code image URL -->
-                <img src="https://placehold.co/200x200/27272a/00B900?text=LINE+QR" alt="LINE公式アカウントQRコード" class="w-48 h-48 rounded-lg mb-4 shadow-md">
+                <!-- 変更点: LINE QRコード画像を差し替え -->
+                <img src="line_oa_chat_250709_143710_group_0.png" alt="LINE公式アカウントQRコード" class="w-48 h-48 rounded-lg mb-4 shadow-md">
             </div>
             <p class="text-gray-400 text-sm mt-4">上記のQRコードをLINEアプリで読み込んでください。</p>
         </div>
