--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
     <section class="py-16 bg-zinc-900"> <!-- 背景色を黒に変更 -->
         <div class="max-w-7xl mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-bold text-center mb-12 text-orange-500">WHAT SAVAGE BASKETBALL</h2>
-            <!-- 変更点: 背景画像のサイズを調整 -->
-            <div class="relative w-full h-64 mb-12" style="background-image: url('15296fbc6040d5d72f9ca1dc622e7984.JPG'); background-size: 80% auto; background-repeat: no-repeat; background-position: center;">
+            <!-- 変更点: 背景画像のサイズを調整 (80%から60%へ) -->
+            <div class="relative w-full h-64 mb-12" style="background-image: url('15296fbc6040d5d72f9ca1dc622e7984.JPG'); background-size: 60% auto; background-repeat: no-repeat; background-position: center;">
                 <div class="absolute inset-0 bg-black opacity-70"></div>
                 <div class="relative z-10 flex flex-col items-center justify-center h-full text-white">
                     <!-- ここにテキスト要素を配置することも可能ですが、今回は背景画像のみの調整なので空にしています -->
