--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         }
         .feature-icon {
             color: #f97316; /* orange-500 */
-            /* 変更点: アイコンのサイズを小さく調整 (2.5remから2remへ) */
-            font-size: 2rem; /* text-3xl */
+            /* アイコンのサイズを小さく調整 */
+            font-size: 1.5rem; /* text-2xl */
             margin-bottom: 1rem;
         }
         .feature-title {
@@ -178,12 +178,8 @@
     <section class="py-16 bg-zinc-900"> <!-- 背景色を黒に変更 -->
         <div class="max-w-7xl mx-auto px-4 text-center">
             <h2 class="text-4xl md:text-5xl font-bold text-center mb-12 text-orange-500">WHAT SAVAGE BASKETBALL</h2>
-            <!-- 背景画像とオーバーレイを削除 -->
-            <div class="relative w-full h-64 mb-12">
-                <div class="flex flex-col items-center justify-center h-full text-white">
-                    <!-- ここにテキスト要素を配置することも可能ですが、今回は背景画像のみの調整なので空にしています -->
-                </div>
-            </div>
+            <!-- 変更点: 背景画像とオーバーレイを削除 -->
+            <!-- ここに元々あった背景画像用のdivを削除しました -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Feature 1: 他社にはない価格競争力 -->
                 <div class="feature-card">
